--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "animejs": "^3.2.0",
     "bootstrap": "^4.5.2",
     "next": "9.5.2",
+    "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^1.1.1"
   }
 }
