--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^1.1.1"
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "prettier": "2.2.1"
   }
 }
